--- a/OnlineSupertmarket/package.json
+++ b/OnlineSupertmarket/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "react": "18.2.0",
@@ -17,6 +18,7 @@
     "react-native-gesture-handler": "^2.14.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
