--- a/OnlineSupertmarket/package.json
+++ b/OnlineSupertmarket/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-modal-selector": "^2.1.2",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-vector-icons": "^10.0.2",
