--- a/OnlineSupertmarket/package.json
+++ b/OnlineSupertmarket/package.json
@@ -10,13 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/geolocation": "^3.1.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-maps": "^1.8.4",
     "react-native-modal-selector": "^2.1.2",
