--- a/OnlineSupertmarket/package.json
+++ b/OnlineSupertmarket/package.json
@@ -22,6 +22,7 @@
     "react-native-modal-selector": "^2.1.2",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-sensors": "^7.3.6",
     "react-native-vector-icons": "^10.0.2",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.0.4",
